Expose more matching parameters

--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -161,7 +161,9 @@
                 <p class="interests">Matching interests: <span data-content="interests"></span></p>
                 <p><strong>Matching availability:</strong> <span data-content="availability"></span></p>
                 <p><strong>Matching request:</strong> <span data-content="matching_profile_request_type"></span></p>
+                <p><strong>Extra person:</strong> <span data-content="extra_person"></span></p>
                 <p data-content="about"></p>
+                <p data-content="activities"></p>
                 <p>
                     <strong>Internal Comment</strong><br />
                     <span data-content="internal_comments"></span>
