--- a/app/Resources/views/email/matchEmail.txt.twig
+++ b/app/Resources/views/email/matchEmail.txt.twig
@@ -15,7 +15,9 @@ Vi rekommenderar att ni byter telefonnummer och skickar en sms-påminnelse dagen
 
 2. Ni träffas! Ni träffas på ett kafé eller annat offentligt ställe i cirka 1 timme. Försök att inte ha höga förväntningar utan ta det som det kommer. Kom i tid! De tråkiga träffarna är när någon inte dyker upp på utsatt tid.
 
-3. Om ni vill, ta gärna ett foto från ert möte och skriva några rader om vad ni gjorde och hur det var (med bådas samtycke). Maila hälsningen till oss så delar vi den gärna digitalt för att inspirera fler till att vara med. Eller hashtagga själv med #kompisbyrån eller #kompisbyran.
+Ladda gärna ner vår mobilapp "Kompisbyrån", en samtalsguide framtagen för er som kompisfikar. Appen kan ni använda för att komma igång med samtalet, eller helt enkelt för att det är roligt. 
+
+3. Om ni vill, ta gärna ett foto från ert möte och skriv några rader om vad ni gjorde och hur det var (med bådas samtycke). Maila hälsningen till oss så delar vi den gärna digitalt för att inspirera fler till att vara med. Eller hashtagga själv med #kompisbyrån eller #kompisbyran. Ni kan även använda Kompisbyrån-appen för att skicka er fikahälsning till oss.
 
 Du är alltid välkommen att höra av dig till oss om något inte blev som du tänkt dig.
 
@@ -35,13 +37,15 @@ The email adress to {{ matchUser.fullName }} is: {{ matchUser.email }}. We have 
 
 Please follow the steps below:
 
-1. Decide a date. You send an email to {{ matchUser.fullName }} within 7 days, and decide date, time and place. Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility of both that you establish contact. Remember to respect each other, not responding an email will affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer.
+1. Decide a date. You send an email to {{ matchUser.fullName }} within 7 days, and decide date, time and place. Write in Swedish or English (some find Google Translate to be a good tool). It is the responsibility of both that you establish contact. Remember to respect each other, not responding an email will affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer.
 
 We recommend that you exchange telephone numbers and send a text message as a reminder the day before your meeting, that the other person confirm.
 
-2. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high expectations but take it as it comes. Be in time! The boring meetings is when someone doesn’t show up on time.
+2. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high expectations but take it as it comes. Be on time! The dull meetings are when someone doesn’t show up on time.
 
-3. The stories from your meetings are always so inspiring. If you want, take a photo during your meeting and tell us more about what you did and how it was (with approval from both of you). If you send it to us, and we will share it digitally. Or feel free to hashtag #kompisbyrån or #kompisbyran
+If you like to, download our app "Kompisbyrån", a conversation guide for your fika meetings. You can use the app to start off the conversation, or simply because it's fun. 
+
+3. The stories from your meetings are always so inspiring. If you want, take a photo during your meeting and tell us more about what you did and how it was (with approval from both of you). If you send it to us we will share it digitally. Or feel free to hashtag #kompisbyrån or #kompisbyran. You can also send us your pictures and stories through the app "Kompisbyrån".
 
 You are always welcome to contact us if anything was not what you expected.
 
