--- a/app/Resources/views/static/start.html.twig
+++ b/app/Resources/views/static/start.html.twig
@@ -7,12 +7,12 @@
             <h2><strong>{{ 'page.start.header'|trans }}</strong></h2>
             <div class="row">
                 <div class="col-md-8 col-sm-8">
-                    {{ 'page.start.text'|trans|raw }}
+                    {{ 'page.start.text'|trans({'%municipalities%': start_friend_municipalities()})|raw }}
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <div class="well br-white border-orange black">
                         <p>
-                            {{ 'page.start.well'|trans }}
+                            {{ 'page.start.well'|trans({'%municipalities%': start_friend_municipalities()}) }}
                         </p>
                     </div>
                 </div>
