--- a/app/Resources/views/user/form.html.twig
+++ b/app/Resources/views/user/form.html.twig
@@ -61,7 +61,7 @@
     <div class="col-sm-8 checkableList">
         {% for type in form.type %}
             {{ form_widget(type, {'label_attr': {'class': 'lead'}}) }}
-            <p>{{ ('user.form.type.' ~ type.vars.value ~ '.help')|trans }}</p>
+            <p>{{ ('user.form.type.' ~ type.vars.value ~ '.help')|trans({'%municipalities%': start_friend_municipalities()}) }}</p>
         {% endfor %}
         {{ form_errors(form.type) }}
     </div>
