--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-md-4 col-md-push-8 col-sm-6 col-sm-push-6">
                     <div class="well br-white border-orange black">
-                        {{ 'user.settings.intro'|trans({'%municipalities%': start_friend_municipalities()})|raw}}
+                        {{ 'user.settings.intro'|trans({'%municipalities%': start_friend_municipalities('global.or')})|raw}}
                     </div>
                 </div>
 
