Add texts and picture for the christmas swish campaign

--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -8,7 +8,10 @@
             <div class="col-md-1 col-sm-0"></div>
             <div class="col-md-7 col-sm-12">
                 <h2><strong>{{ 'page.work_with_us.header'|trans }}</strong></h2>
-                {{ 'page.work_with_us.text'|trans|raw }}
+                {{ 'page.work_with_us.text1'|trans|raw }}
+                <img src="{{ asset('images/julkampanj.jpg') }}" alt="Julkampanj" class="img-responsive center-block">
+                <br>
+                {{ 'page.work_with_us.text2'|trans|raw }}
             </div>
 
             <div class="col-md-4 col-sm-12">
