--- a/app/Resources/views/open/connection.html.twig
+++ b/app/Resources/views/open/connection.html.twig
@@ -11,18 +11,18 @@
                     {% if alreadyConfirmed %}
                         {{ 'open.confirm_meeting.already_answered'|trans|nl2br }}
                     {% else %}
-                        <p> {{ 'open.confirm_meeting.ingress'|trans }}</p>
+                        <p id="intro"> {{ 'open.confirm_meeting.ingress'|trans }}</p>
 
                         <div id="buttons">
-                            <a href="#" data-status="{{ constant('AppBundle\\Enum\\MeetingTypes::MET') }}" class="btn btn-lg btn-success">
+                            <a href="#" data-status="{{ constant('AppBundle\\Enum\\MeetingTypes::MET') }}" class="btn btn-success">
                                 {{ 'open.confirm_meeting.button.met'|trans }}
                             </a>
                             &nbsp;
-                            <a href="#" data-status="{{ constant('AppBundle\\Enum\\MeetingTypes::NOT_YET_MET') }}" class="btn btn-lg btn-default">
+                            <a href="#" data-status="{{ constant('AppBundle\\Enum\\MeetingTypes::NOT_YET_MET') }}" class="btn btn-default">
                                 {{ 'open.confirm_meeting.button.not_yet_met'|trans }}
                             </a>
                             &nbsp;
-                            <a href="#" data-status="{{ constant('AppBundle\\Enum\\MeetingTypes::WILL_NOT_MEET') }}" class="btn btn-lg btn-danger">
+                            <a href="#" data-status="{{ constant('AppBundle\\Enum\\MeetingTypes::WILL_NOT_MEET') }}" class="btn btn-danger">
                                 {{ 'open.confirm_meeting.button.will_not_meet'|trans }}
                             </a>
                         </div>
@@ -55,6 +55,7 @@
 
                 $.post('{{ path('public_connection', {'uuid': uuid, 'id': connection.id}) }}', data, function(resp) {
                     $('#buttons').hide();
+                    $('#intro').hide();
                     $('#' + status).removeClass('hidden');
                 });
             });
