--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -20,9 +20,12 @@
 
             <div class="col-md-4 col-sm-12">
                 <div class="partner-wrapper">
+                    <img src="{{ asset('images/oppna-dorren.jpg') }}" alt="Öppna dörren" class="partner-logo"><br>
                     <img src="{{ asset('images/delicato.png') }}" alt="Delicato" class="partner-logo"><br>
-                    <img src="{{ asset('images/postkodstiftelsen.jpg') }}" alt="Postkodstiftelsen" class="partner-logo"><br>
-                    <img src="{{ asset('images/sigtuna.png') }}" alt="Sigtunastiftelsen" class="partner-logo">
+                    <img src="{{ asset('images/nacka.jpg') }}" alt="Nacka" class="partner-logo"><br>
+                    <img src="{{ asset('images/solna.gif') }}" alt="Solna" class="partner-logo"><br>
+                    <img src="{{ asset('images/tyreso.gif') }}" alt="Tyresö" class="partner-logo"><br>
+                    <img src="{{ asset('images/vaxholm.jpg') }}" alt="Vaxholm" class="partner-logo"><br>
                 </div>
             </div>
 
