Save newly arrived on connection and show in admin

--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -16,6 +16,9 @@
         href="{{ path('admin_user', {'id': user.id}) }}"
         >{{ user.name }}</a></strong>
     - {{ user.email }}<br>
+    {% if wantToLearn and connection.newlyArrived%}
+        <span class="label label-info">Nyanländ</span><br>
+    {% endif %}
     <em>{{ comment }}</em><br>
     <a
         href="#"
