--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -159,6 +159,7 @@
                 </div>
                 <h4><span data-content="user_info"></span> (<span data-content="matches" data-format="SpanDelimiter"></span>)</h4>
                 <p class="interests">Matching interests: <span data-content="interests"></span></p>
+                <p><strong>Newly arrived:</strong> <span data-content="newly_arrived"></span></p>
                 <p><strong>Matching availability:</strong> <span data-content="availability"></span></p>
                 <p><strong>Matching request:</strong> <span data-content="matching_profile_request_type"></span></p>
                 <p><strong>Extra person:</strong> <span data-content="extra_person"></span></p>
