--- a/app/Resources/views/admin2/user/info.html.twig
+++ b/app/Resources/views/admin2/user/info.html.twig
@@ -25,6 +25,12 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="col-sm-2 control-label">Newly arrived</label>
+            <div class="col-sm-10">
+                <div class="form-control" id="type">{{ user.newlyArrived ? 'yes'|trans : 'no'|trans}}</div>
+            </div>
+        </div>
+        <div class="form-group">
             <label class="col-sm-2 control-label">{{ 'Country'|trans }}</label>
             <div class="col-sm-10">
                 <div class="form-control" id="countryName">{{ user.countryName }}</div>
