--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -10,6 +10,7 @@
         {% set meetingStatus = connection.learnerMeetingStatus %}
         {% set meetingStatusEmailSentDates = connection.learnerMeetingStatusEmailSentAtDates %}
         {% set followUpEmailSentDates = connection.learnerFollowUpEmail2SentAtDates %}
+        {% set markedAsMetCreatedAt = connection.learnerMarkedAsMetCreatedAt %}
     {% else %}
         {% set user = connection.fluentSpeaker %}
         {% set comment = connection.fluentSpeakerComment %}
@@ -17,6 +18,7 @@
         {% set meetingStatus = connection.fluentSpeakerMeetingStatus %}
         {% set meetingStatusEmailSentDates = connection.fluentSpeakerMeetingStatusEmailSentAtDates %}
         {% set followUpEmailSentDates = connection.fluentSpeakerFollowUpEmail2SentAtDates %}
+        {% set markedAsMetCreatedAt = connection.fluentSpeakerMarkedAsMetCreatedAt %}
     {% endif %}
     <strong><a
         href="{{ path('admin_user', {'id': user.id}) }}"
@@ -25,14 +27,19 @@
     {% if wantToLearn and connection.newlyArrived %}
         <span class="label label-info">Nyanländ</span><br>
     {% endif %}
-    Mötesstatus:
+    <strong>Mötesstatus:</strong>
 
     <span class="label label-{{ meetingStatus|meeting_status_color }}">
         <i class="fa fa-{{ meetingStatus|meeting_status_icon }}"></i>
         {{ ('meeting_type.' ~ meetingStatus)|trans }}
     </span><br>
 
-    Skickade uppföljningsmejl:
+    <strong>Mötet bekräftat:</strong>
+    {% if meetingStatus == constant('AppBundle\\Enum\\MeetingTypes::MET') %}
+         {{ markedAsMetCreatedAt|date('Y-m-d H:i') }}
+    {% endif %}<br>
+    
+    <strong>Skickade uppföljningsmejl:</strong>
     {% if meetingStatusEmailSentDates|length == 0 %}
         -
     {% else %}
@@ -42,7 +49,7 @@
         {% endfor %}
     {% endif %}<br>
 
-    Skickat avslutande enkätmejl:
+    <strong>Skickat avslutande enkätmejl:</strong>
     {% if followUpEmailSentDates|length == 0 %}
         -
     {% else %}
