--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -82,13 +82,28 @@
     <div class="inner-page">
         <div class="container">
 
-            <form method="get" action="" class="form-inline">
+            <form method="post" action=""  class="form-inline">
                 <div class="form-group">
-                    <input type="text" name="q" class="form-control">
+                {{ form_label(form.q) }}
+                {{ form_widget(form.q) }}
                 </div>
+                <div class="form-group">
+                {{ form_label(form.city) }}
+                {{ form_widget(form.city) }}
+                </div>
+                <div class="form-group">
+                {{ form_label(form.from) }}
+                {{ form_widget(form.from) }}
+                </div>
+                <div class="form-group">
+                {{ form_label(form.to) }}
+                {{ form_widget(form.to) }}
+                </div>
+                {{ form_label(form.onlyNewlyArrived) }}
+                {{ form_widget(form.onlyNewlyArrived) }}
                 <button type="submit" class="btn btn-primary">Sök</button>
-            </form>
 
+            </form>
 
             <table class="table">
                 <thead>
