--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -69,13 +69,17 @@
                         <p>{{ 'index.again.intro'|trans }}</p>
                         {% if connectionRequest %}
                             <div class="alert alert-info" role="alert">
-                                {{ 'error.active_request'|trans }}
+                                {% if connectionRequest.pending %}
+                                    {{ 'error.pending_request'|trans }}
+                                {% else %}
+                                    {{ 'error.active_request'|trans }}
+                                {% endif %}
                             </div>
                         {% else %}
                             {{ include(':user:form.html.twig') }}
                             <input type="submit" value="{{ 'connection_request.form.button'|trans }}" class="btn btn-default">
                             {{ form_end(form) }}
-                        {% endif %}
+                        {% endfor %}
                     </div>
                 </div>
             </div>
