--- a/app/Resources/views/user/form.html.twig
+++ b/app/Resources/views/user/form.html.twig
@@ -263,8 +263,8 @@
     </div>
 </div>
 
-{% if form.connectionRequests is defined %}
-    {% set connectionRequest = form.connectionRequests[0] %}
+{% if form.newConnectionRequest is defined %}
+    {% set connectionRequest = form.newConnectionRequest %}
     <h3>Om mötet</h3>
     <div class="form-group hidden music friend">
         {{ form_label(connectionRequest.city) }}
