Preserve search settings on pagination

--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -82,7 +82,7 @@
     <div class="inner-page">
         <div class="container">
 
-            <form method="post" action=""  class="form-inline">
+            <form method="get" action=""  class="form-inline">
                 <div class="form-group">
                 {{ form_label(form.q) }}
                 {{ form_widget(form.q) }}
