Filter connections by meeting variants

--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -99,6 +99,10 @@
                 {{ form_label(form.to) }}
                 {{ form_widget(form.to) }}
                 </div>
+                <div class="form-group">
+                {{ form_label(form.meetingStatus) }}
+                {{ form_widget(form.meetingStatus) }}
+                </div>
                 {{ form_label(form.onlyNewlyArrived) }}
                 {{ form_widget(form.onlyNewlyArrived) }}
                 <button type="submit" class="btn btn-primary">Sök</button>
