--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -79,7 +79,7 @@
                             {{ include(':user:form.html.twig') }}
                             <input type="submit" value="{{ 'connection_request.form.button'|trans }}" class="btn btn-default">
                             {{ form_end(form) }}
-                        {% endfor %}
+                        {% endif %}
                     </div>
                 </div>
             </div>
