--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -61,6 +61,7 @@
 
 
     <em>{{ comment }}</em><br>
+    {% if connection.city %}
     <a
         href="#"
         class="create-connection-request btn btn-default btn-sm"
@@ -71,6 +72,7 @@
         data-city-id="{{ connection.city.id }}"
         data-date="{{ date|date('Y-m-d H:i:s') }}"
     >Kompisfika igen</a>
+    {% endif %}
 
     <div class="color: red" style="display: none">
         {{ 'error.active_request'|trans }}
@@ -90,6 +92,10 @@
                 <div class="form-group">
                 {{ form_label(form.city) }}
                 {{ form_widget(form.city) }}
+                </div>
+                <div class="form-group">
+                {{ form_label(form.municipality) }}
+                {{ form_widget(form.municipality) }}
                 </div>
                 <div class="form-group">
                 {{ form_label(form.from) }}
@@ -115,8 +121,8 @@
                         <th>Skapad</th>
                         <th>Lärare</th>
                         <th>Övare</th>
-                        <th>Ort</th>
-                        <th>Musikompis</th>
+                        <th>Ort/kommun</th>
+                        <th>Typ</th>
                         <th>Skapad av</th>
                     </tr>
                 </thead>
@@ -153,8 +159,11 @@
                             <td>
                                 {{ macro.userCell(connection, true) }}
                             </td>
-                            <td>{{ connection.city.name }}</td>
-                            <td>{% if connection.type == constant('AppBundle\\Enum\\FriendTypes::MUSIC') %}&cross;{% endif %}</td>
+                            <td>
+                                {{ connection.city ? connection.city.name : '' }}
+                                {{ connection.municipality ? connection.municipality.name : '' }}
+                            </td>
+                            <td>{{ connection.type }}</td>
                             <td>{{ connection.createdBy.name }}</td>
                         </tr>
                     </tbody>
