--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -118,6 +118,10 @@
                 {{ form_label(form.meetingStatus) }}
                 {{ form_widget(form.meetingStatus) }}
                 </div>
+                <div class="form-group">
+                {{ form_label(form.type) }}
+                {{ form_widget(form.type) }}
+                </div>
                 {{ form_label(form.onlyNewlyArrived) }}
                 {{ form_widget(form.onlyNewlyArrived) }}
                 <button type="submit" class="btn btn-primary">Sök</button>
