Re match intro text

--- a/app/Resources/views/open/connection.html.twig
+++ b/app/Resources/views/open/connection.html.twig
@@ -37,6 +37,9 @@
 
                             {% if clone %}
                                 <p>
+                                    {{ 'open.confirm_meeting.clone.intro'|trans }}
+                                </p>
+                                <p>
                                     <a href="#" id="re-match" class="btn btn-success">{{ 'open.confirm_meeting.clone.button'|trans }}</a>
                                     <div id="re-match-text" class="hidden">
                                         <strong>{{ 'open.confirm_meeting.clone.confirm_message'|trans }}</strong>
