--- a/app/Resources/views/user/form.html.twig
+++ b/app/Resources/views/user/form.html.twig
@@ -284,7 +284,7 @@
         </div>
     </div>
 
-    <div class="form-group hidden start">
+    <div class="form-group hidden">
         {{ form_label(connectionRequest.municipality) }}
         <div class="col-sm-4">
             {{ form_widget(connectionRequest.municipality) }}
