Bug fix: Menu dropdown items disappers when clicked

--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -114,3 +114,12 @@ div.candidate span.matches a.google-link {
 .text-muted {
     color: #9a9a9a;
 }
+.nav-head .navbar-default  .navbar-nav > li.open a{
+    background: none;	
+    color: #555;
+}
+.nav-head .navbar-default  .navbar-nav > li > a:active,
+.nav-head .navbar-default  .navbar-nav > li > a:focus{
+    background: none !important;
+    color: #555;
+}
